Version 1.3 - 2015-01-22
* Use workflow to compute loan payments
* Use bisect to speed up payment by date finding

Version 1.2 - 2014-07-01
* Changelog file creation
* Add wizard to display outstanding amounts