@@ -20,6 +20,4 @@
             string="Calculate Amortization Table"
             icon="tryton-go-next"/>
     </group>
-    <label name="is_used_on_active_contract"/>
-    <field name="is_used_on_active_contract"/>
 </form>
