@@ -1,3 +1,5 @@
+* Allow user to force loan modification even if there is another active contract using it
+
 Version 1.3 - 2015-01-22
 * Use workflow to compute loan payments
 * Use bisect to speed up payment by date finding
